@@ -38,6 +38,7 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
         self.context.facets = []
         self.context.filter_queries = []
         self.context.slow_query_threshold = 0
+        self.context.effective_steps = 1
 
     def _initProperties(self, node):
         elems = node.getElementsByTagName('connection')
@@ -93,6 +94,9 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
                 elif child.nodeName == 'slow-query-threshold':
                     value = int(str(child.getAttribute('value')))
                     self.context.slow_query_threshold = value
+                elif child.nodeName == 'effective-steps':
+                    value = int(str(child.getAttribute('value')))
+                    self.context.effective_steps = value
 
     def _createNode(self, name, value):
         node = self._doc.createElement(name)
@@ -137,6 +141,8 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
             filter_queries.appendChild(param)
         append(create('slow-query-threshold',
             str(self.context.slow_query_threshold)))
+        append(create('effective-steps',
+            str(self.context.effective_steps)))
         return node
 
 
