@@ -24,6 +24,7 @@ class SetupToolTests(SolrTestCase, TarballTester):
         config.facets = ('type', 'state')
         config.filter_queries = ('type', )
         config.slow_query_threshold = 2342
+        config.effective_steps = 900
 
     def testImportStep(self):
         profile = 'profile-collective.solr:default'
@@ -46,6 +47,7 @@ class SetupToolTests(SolrTestCase, TarballTester):
         self.assertEqual(config.facets, ('portal_type', 'review_state'))
         self.assertEqual(config.filter_queries, ('portal_type', ))
         self.assertEqual(config.slow_query_threshold, 0)
+        self.assertEqual(config.effective_steps, 900)
 
     def testExportStep(self):
         tool = self.portal.portal_setup
@@ -105,6 +107,7 @@ SOLR_XML = """\
       <parameter name="type" />
     </filter-query-parameters>
     <slow-query-threshold value="2342" />
+    <effective-steps value="900" />
   </settings>
 </object>
 """
